[project]
name = "customer-support-openenv"
version = "0.1.0"
description = "RL-based customer support environment"
authors = [{ name = "Somya Sahu" }]
requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "uvicorn",
    "requests",
    "pydantic",
    "openai",
    "openenv-core>=0.2.0"
]


[project.scripts]
server = "server.app:app"


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
